Refactoring quality (#4)
* refactoring(codecleanup, coverage, quality) try to improve codequality and coverage

* remove unused imports
* migrate to java 11 syntax
* accessibility checks

* Update README.md

added badges

* refactoring(codecleanup, coverage, quality) try to improve codequality and coverage

* remove unused imports
* migrate to java 11 syntax
* accessibility checks
* fixed some SpotBugs

* refactoring(codecleanup, coverage, quality) try to improve codequality and coverage

* reformat with sun checkstyle

* refactoring(codecleanup, coverage, quality) try to improve codequality and coverage

* fixed some bugs